<resources>
    <string name="app_name" translatable="false">Examples Collection</string>
    <string name="app_description">This is a collection of features i have implemented on my projects or have picked my interest</string>

    <string name="your_color_is">Your color is: %1$s</string>
    <string name="open_from_qr">Open from QR</string>
    <string name="opened_from_qr">This was opened from a QR code</string>
    <string name="to_open_from_qr">To open this from a QR code create one from a link like bellow</string>
    <string name="qr_example">https://www.qrbydnieln7.com/#COLOR_IN_HEXADECIMAL</string>
    <string name="notification_action_triggered">Hello from notification</string>
    <string name="send_action">Send action</string>
    <string name="test_notification_action">Test notification with action</string>
    <string name="notification_with_action">Notification with action</string>
    <string name="notifications">Notifications</string>
    <string name="animations">Animations</string>
    <string name="common_animations">Common animations</string>
    <string name="controls">Controls</string>
    <string name="rotate">Rotate</string>
    <string name="translate">Translate</string>
    <string name="scale">Scale</string>
    <string name="fade">Fade</string>
    <string name="change_color">Change color</string>
    <string name="shower">Shower</string>
    <string name="result">Result</string>
    <string name="location">Location</string>
    <string name="map_type">Map type</string>
    <string name="minimalistic_map_theme">Minimalistic map theme (only for normal map)</string>
    <string name="settings">Settings</string>
    <string name="location_tracking">Location tracking</string>
    <string name="clear_map">Clear map</string>
    <string name="search">Search</string>
    <string name="mark_location">Mark location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="maps_api_key" translatable="false">MAPS_KEY</string>
    <string name="permissions_denied">You need to grant the required permissions to continue</string>
    <string name="services_denied">You need to enable the required services to continue</string>
    <string name="maps">Google Maps</string>
    <string name="fused_location" translatable="false">Fused Location API</string>
    <string name="latitude_placeholder">Latitude: %1$s</string>
    <string name="longitude_placeholder">Longitude: %1$s</string>
    <string name="altitude_placeholder">Altitude: %1$s</string>
    <string name="last_known_location">Last known location</string>
    <string name="current_location">Current location</string>
    <string name="location_updates">Location updates</string>
    <string name="get_last_known_location">Get last known location</string>
    <string name="get_current_location">Get current location</string>
    <string name="turn_on">Turn on</string>
    <string name="turn_off">Turn off</string>
    <string name="battery_bubble_desc">Floating bubble displaying battery information</string>
    <string name="battery_bubble">Battery bubble</string>
    <string name="battery_bubble_running">Battery bubble is running...</string>
    <string name="battery_service">Battery Service</string>
</resources>