<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingVertical="20dp"
    tools:context=".qr.QrActivity">

    <TextView
        android:id="@+id/from_qr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/opened_from_qr"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

    <TextView
        android:id="@+id/not_from_qr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/to_open_from_qr"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:visibility="gone" />

    <TextView
        android:id="@+id/example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qr_example"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textSize="12sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/color_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/your_color_is"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

    <FrameLayout
        android:id="@+id/color"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="?attr/colorPrimary" />
</LinearLayout>